--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
         <div class="col-md-4 col-lg-3">
           <div class="widget">
             <img class="mb-4" src="{{ site.url | append: site.nav_logo }}" srcset="{{ site.url | append: site.nav_logo2x }}" alt="" />
-            <p class="mb-2">© {{ site.time | date: "%Y" }}. All Rights Reserved.<br /><a href="/privacy-policy">> <u>Privacy Policy</u></a><br /><a href="/cookie-policy">> <u>Cookie Policy</u></a></p>
+            <p class="mb-2">© {{ site.time | date: "%Y" }}. All Rights Reserved.<br /><a href="/about-us/privacy-policy">> <u>Privacy Policy</u></a><br /><a href="/about-us/cookie-policy">> <u>Cookie Policy</u></a></p>
           </div>
           <!-- /.widget -->
         </div>
@@ -59,11 +59,5 @@
   </div>
   <script src="{{ site.url }}/assets/js/plugins.js"></script>
   <script src="{{ site.url }}/assets/js/theme.js"></script>
-
-  <!-- Begin: CookieBot Declaration Script -->
-  <!-- <script id="CookieDeclaration" src="https://consent.cookiebot.com/3f731cd7-57dc-4e2f-b612-24a4cbaf3c8d/cd.js" type="text/javascript" async></script> -->
-  <!-- End: CookieBot Declaration Script -->
-
 </body>
-
 </html>
